# fpga

./: entry.cpp
toawsvm/: ethash.cl
toawsvm/ethminer/: CMakeLists.txt  README.md
toawsvm/ethminer/cmake/: CMakeCache.txt
toawsvm/ethminer/cmake/Hunter/: config.cmake
toawsvm/ethminer/ethminer/: CMakeLists.txt  main.cpp
toawsvm/ethminer/libethash-cl/: CLMiner.cpp  CMakeLists.txt
toawsvm/ethminer/libethash-cl/kernels/cl/custom/s10_sh2e1_4Gx2/: build.bat  ethash.cl
toawsvm/ethminer/libethcore/: Farm.cpp  Miner.h
toawsvm/ethminer/libpoolprotocols/: CMakeLists.txt
toawsvm/ethminer/libpoolprotocols/getwork/: EthGetworkClient.h
toawsvm/ethminer/scripts/: build_macos.sh  build_windows.bat  rebuild_macos.sh  results.txt  start_mining_fpga.bat  start_mining_fpga.sh
toawsvm/ethminersup/: emconfig.json
